[gd_scene load_steps=16 format=3 uid="uid://d1vlb5sorjdpe"]

[ext_resource type="PackedScene" uid="uid://cjpo6fm3oc8ol" path="res://front office walls.blend" id="1_2xklu"]
[ext_resource type="PackedScene" uid="uid://na8ew0e68buf" path="res://water_fall_front_office.tscn" id="2_xvgot"]
[ext_resource type="PackedScene" uid="uid://cev125wyybgbw" path="res://desk_front_office.tscn" id="3_sihgy"]
[ext_resource type="PackedScene" uid="uid://nqi63brno12o" path="res://Player.tscn" id="4_py1vm"]
[ext_resource type="PackedScene" uid="uid://cwi3tsi4abf7l" path="res://potted_plant.tscn" id="5_g8kvt"]
[ext_resource type="PackedScene" uid="uid://cwnm76u8kdn87" path="res://computer_monitor.tscn" id="6_fm5y3"]
[ext_resource type="PackedScene" uid="uid://5rdd4d641ybe" path="res://chair_front_office.tscn" id="7_h4ius"]
[ext_resource type="Script" path="res://cam_control.gd" id="8_ejfmu"]
[ext_resource type="PackedScene" uid="uid://bqbodh8ldi168" path="res://andrew_barrenl.tscn" id="9_n1fh1"]
[ext_resource type="PackedScene" uid="uid://w3ttl0sntt4p" path="res://Mr.ligma.tscn" id="10_72ryg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ndnvx"]
size = Vector3(2.88599, 1, 16.5121)

[sub_resource type="BoxShape3D" id="BoxShape3D_fdukc"]
size = Vector3(2.88599, 1, 16.5121)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ckgju"]
data = PackedVector3Array(1, 0, 5.222, 1, -0.2516, -1, 1, 0, -1, 1, 0, 5.222, 1, -0.2516, 5.222, 1, -0.2516, -1, -1, -0.2516, 5.222, 1, -0.2516, -1, 1, -0.2516, 5.222, -1, -0.2516, 5.222, -1, -0.2516, -1, 1, -0.2516, -1, -1, 0, -1, -1, -0.2516, 5.222, -1, 0, 5.222, -1, 0, -1, -1, -0.2516, -1, -1, -0.2516, 5.222, 1.0848, 0, -1, 1, 0, -5.054, 1, 0, -1, 1.0848, 0, -1, 1.0848, 0, -5.054, 1, 0, -5.054, -1, 0, 5.222, 1, -0.2516, 5.222, 1, 0, 5.222, -1, 0, 5.222, -1, -0.2516, 5.222, 1, -0.2516, 5.222, -1, 0, 5.222, -1.0624, 1.6318, 5.222, -1, 1.6318, 5.222, -1, 0, 5.222, -1.0624, 0, 5.222, -1.0624, 1.6318, 5.222, 1, 1.6273, 5.222, 1.0848, 0, 5.222, 1, 0, 5.222, 1, 1.6273, 5.222, 1.0848, 1.6273, 5.222, 1.0848, 0, 5.222, -1.0624, 0, -1, -1.0624, 1.6318, 5.222, -1.0624, 0, 5.222, -1.0624, 0, -1, -1.0624, 1.6318, -1, -1.0624, 1.6318, 5.222, -1, 1.6318, 5.222, -1.0624, 1.6318, -1, -1, 1.6318, -1, -1, 1.6318, 5.222, -1.0624, 1.6318, 5.222, -1.0624, 1.6318, -1, -1, 0, -1, -1.0624, 0, 5.222, -1, 0, 5.222, -1, 0, -1, -1.0624, 0, -1, -1.0624, 0, 5.222, -1, 0, -1, -1.0624, 0, -5.054, -1.0624, 0, -1, -1, 0, -1, -1, 0, -5.054, -1.0624, 0, -5.054, 1.0848, 0, 5.222, 1.0848, 1.6273, -1, 1.0848, 0, -1, 1.0848, 0, 5.222, 1.0848, 1.6273, 5.222, 1.0848, 1.6273, -1, 1, 0, 5.222, 1.0848, 0, -1, 1, 0, -1, 1, 0, 5.222, 1.0848, 0, 5.222, 1.0848, 0, -1, 1, -0.2516, -1, 1, 0, -5.054, 1, 0, -1, 1, -0.2516, -1, 1, -0.2516, -5.054, 1, 0, -5.054, 1, 1.6273, -1, 1.0848, 1.6273, 5.222, 1, 1.6273, 5.222, 1, 1.6273, -1, 1.0848, 1.6273, -1, 1.0848, 1.6273, 5.222, -1, 0, -1, -1, 1.6318, 5.222, -1, 1.6318, -1, -1, 0, -1, -1, 0, 5.222, -1, 1.6318, 5.222, 1, 0, 5.222, 1, 1.6273, -1, 1, 1.6273, 5.222, 1, 0, 5.222, 1, 0, -1, 1, 1.6273, -1, 1, 0, -5.054, -1, -0.2516, -5.054, -1, 0, -5.054, 1, 0, -5.054, 1, -0.2516, -5.054, -1, -0.2516, -5.054, -1, 1.6318, -5.054, -1.0624, 0, -5.054, -1, 0, -5.054, -1, 1.6318, -5.054, -1.0624, 1.6318, -5.054, -1.0624, 0, -5.054, 1, 0, -5.054, 1.0848, 1.6273, -5.054, 1, 1.6273, -5.054, 1, 0, -5.054, 1.0848, 0, -5.054, 1.0848, 1.6273, -5.054, 1.0848, 1.6273, -1, 1.0848, 0, -5.054, 1.0848, 0, -1, 1.0848, 1.6273, -1, 1.0848, 1.6273, -5.054, 1.0848, 0, -5.054, 1, 1.6273, -1, 1.0848, 1.6273, -5.054, 1.0848, 1.6273, -1, 1, 1.6273, -1, 1, 1.6273, -5.054, 1.0848, 1.6273, -5.054, -1, 1.6318, -1, -1, 0, -5.054, -1, 0, -1, -1, 1.6318, -1, -1, 1.6318, -5.054, -1, 0, -5.054, -1.0624, 0, -1, -1.0624, 1.6318, -5.054, -1.0624, 1.6318, -1, -1.0624, 0, -1, -1.0624, 0, -5.054, -1.0624, 1.6318, -5.054, 1, 0, -1, -1, 0, -5.054, -1, 0, -1, 1, 0, -1, 1, 0, -5.054, -1, 0, -5.054, 1, 0, -1, 1, 1.6273, -5.054, 1, 1.6273, -1, 1, 0, -1, 1, 0, -5.054, 1, 1.6273, -5.054, -1, -0.2516, -1, 1, -0.2516, -5.054, 1, -0.2516, -1, -1, -0.2516, -1, -1, -0.2516, -5.054, 1, -0.2516, -5.054, -1.0624, 1.6318, -1, -1, 1.6318, -5.054, -1, 1.6318, -1, -1.0624, 1.6318, -1, -1.0624, 1.6318, -5.054, -1, 1.6318, -5.054, -1, 0, -1, -1, -0.2516, -5.054, -1, -0.2516, -1, -1, 0, -1, -1, 0, -5.054, -1, -0.2516, -5.054, -1, 0, -1, 1, 0, 5.222, 1, 0, -1, -1, 0, -1, -1, 0, 5.222, 1, 0, 5.222)

[sub_resource type="BoxShape3D" id="BoxShape3D_t0v34"]
size = Vector3(2.14565, 1.38771, 0.0460205)

[sub_resource type="BoxShape3D" id="BoxShape3D_181g2"]
size = Vector3(0.580738, 0.945206, 0.0460205)

[node name="front office walls" instance=ExtResource("1_2xklu")]

[node name="water_fall_front_office" parent="." index="1" instance=ExtResource("2_xvgot")]
transform = Transform3D(0.115, 0, 0, 0, 0.115, 0, 0, 0, 0.115, 0, 0.241335, -0.988742)

[node name="front desk" parent="." index="2" instance=ExtResource("3_sihgy")]
transform = Transform3D(0.18, 0, 0, 0, 0.18, 0, 0, 0, 0.18, 0, 0.272462, 0)

[node name="computer monitor" parent="front desk" index="3" instance=ExtResource("6_fm5y3")]
transform = Transform3D(-5.55556, 0, -4.85682e-07, 0, 5.55556, 0, 4.85682e-07, 0, -5.55556, -0.0154148, 1.44655, 0.814589)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 0.0743348, 0.997233, 0, -0.997233, 0.0743348, 0, 2.12114, 0.387434)

[node name="CharacterBody3D" parent="." index="4" instance=ExtResource("4_py1vm")]
transform = Transform3D(0.205, 0, 0, 0, 0.205, 0, 0, 0, 0.205, 0, 0.436249, 0.728625)

[node name="StaticBody3D" type="StaticBody3D" parent="." index="5"]

[node name="potted plant" parent="." index="6" instance=ExtResource("5_g8kvt")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.769234, 0.102636, 0.000524282)

[node name="StaticBody3D2" type="StaticBody3D" parent="." index="7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.11438, -0.488282, -1.58234)
shape = SubResource("BoxShape3D_ndnvx")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D2" index="1"]
transform = Transform3D(1, 0, 0, 0, -0.117468, -0.993077, 0, 0.993077, -0.117468, -0.11438, 0.67323, -4.57232)
shape = SubResource("BoxShape3D_fdukc")

[node name="StaticBody3D" type="StaticBody3D" parent="Plane_001" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plane_001/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_ckgju")

[node name="cam_control" type="Node3D" parent="." index="9"]
script = ExtResource("8_ejfmu")

[node name="cam_1" type="Camera3D" parent="cam_control" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.802818, 0.596225, 0, -0.596225, 0.802818, -0.021, 1.8454, 1.55507)

[node name="cam_2" type="Camera3D" parent="cam_control" index="1"]
transform = Transform3D(-0.997239, -0.0442788, 0.0596214, -0.0410135, 0.997648, 0.0549197, -0.0619129, 0.0523227, -0.996709, 0, 0.48967, -4.079)

[node name="area_2" type="Area3D" parent="cam_control" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.66863, 0.508194)

[node name="CollisionShape3D" type="CollisionShape3D" parent="cam_control/area_2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.126869, 0.247673, -1.90622)
shape = SubResource("BoxShape3D_t0v34")

[node name="area_1" type="Area3D" parent="cam_control" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.146019, 0.905931, 0.891474)

[node name="CollisionShape3D" type="CollisionShape3D" parent="cam_control/area_1" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.12027, 0.0889732, -1.90622)
shape = SubResource("BoxShape3D_t0v34")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="cam_control/area_1" index="1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.38797, -0.290979, -0.656319)
shape = SubResource("BoxShape3D_181g2")

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, -0.998202, -0.0599335, 0, 0.0599335, -0.998202, 0.0800993, 0.243508, -3.05883)
light_energy = 0.1

[node name="barrels" type="Node3D" parent="." index="11"]

[node name="andrew barrenl" parent="barrels" index="0" instance=ExtResource("9_n1fh1")]
transform = Transform3D(-0.997386, 0, 0.0722633, 0, 1, 0, -0.0722633, 0, -0.997386, -0.554, 0.275, -2.753)

[node name="andrew barrenl2" parent="barrels" index="1" instance=ExtResource("9_n1fh1")]
transform = Transform3D(-0.997386, 0, 0.0722633, 0, 1, 0, -0.0722633, 0, -0.997386, 0.543157, 0.275, -3.03807)

[node name="andrew barrenl3" parent="barrels" index="2" instance=ExtResource("9_n1fh1")]
transform = Transform3D(-0.997386, 0, 0.0722633, -0.0722563, 0.0138923, -0.997289, -0.00100391, -0.999904, -0.013856, -0.836, 0.157, -3.06)

[node name="andrew barrenl4" parent="barrels" index="3" instance=ExtResource("9_n1fh1")]
transform = Transform3D(-0.0369132, 0.999315, 0.00267446, 0.996702, 0.03701, -0.0722138, -0.0722633, 9.66307e-10, -0.997386, 0.824093, 0.18601, -2.75318)

[node name="andrew barrenl5" parent="barrels" index="4" instance=ExtResource("9_n1fh1")]
transform = Transform3D(-0.930418, 0, 0.366501, 0, 1, 0, -0.366501, 0, -0.930418, 0.418, 0.325, -3.647)

[node name="chairs" type="Node3D" parent="." index="12"]

[node name="chair_front_office" parent="chairs" index="0" instance=ExtResource("7_h4ius")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -1.09729, 0.263079, 0.717749)

[node name="chair_front_office2" parent="chairs" index="1" instance=ExtResource("7_h4ius")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -1.09729, 0.263079, 1.12579)

[node name="chair_front_office3" parent="chairs" index="2" instance=ExtResource("7_h4ius")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -1.09729, 0.263079, 1.51233)

[node name="chair_front_office4" parent="chairs" index="3" instance=ExtResource("7_h4ius")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -1.09729, 0.263079, 1.92037)

[node name="ligma balls" parent="." index="13" instance=ExtResource("10_72ryg")]
transform = Transform3D(-0.120276, 0, -0.166008, 0, 0.205, 0, 0.166008, 0, -0.120276, 0.90258, 0.424263, 0.261411)

[connection signal="body_entered" from="cam_control/area_2" to="cam_control" method="_on_area_2_body_entered"]
[connection signal="body_entered" from="cam_control/area_1" to="cam_control" method="_on_area_1_body_entered"]
